--- a/sales.html
+++ b/sales.html
@@ -9,8 +9,12 @@
   <body>
     <h1>Salmon Cookies Sales</h1>
 
-    <!-- I would expect 5 lists - one fore each location -->
+    <!-- 5 lists - One fore each location -->
     <ul id="seattle">Seattle</ul>
+    <ul id="tokyo">Tokyo</ul>
+    <ul id="dubai">Dubai</ul>
+    <ul id="paris">Paris</ul>
+    <ul id="lima">Lima</ul>
     
     <script src="js/app.js"></script>
   </body>
