Rewrote most of the code in appJs and some saleHTML, create code for total cookies sold for each location, added some CSS

--- a/sales.html
+++ b/sales.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <main id="container">
     <h1>Salmon Cookies Sales</h1>
 
     <!-- 5 lists - One fore each location -->
@@ -15,7 +16,7 @@
     <ul id="dubai">Dubai</ul>
     <ul id="paris">Paris</ul>
     <ul id="lima">Lima</ul>
-    
+  </main>
     <script src="js/app.js"></script>
   </body>
 </html>
