--- a/sales.html
+++ b/sales.html
@@ -7,16 +7,9 @@
   </head>
 
   <body>
-    <main id="container">
-    <h1>Salmon Cookies Sales</h1>
 
-    <!-- 5 lists - One fore each location -->
-    <ul id="seattle">Seattle</ul>
-    <ul id="tokyo">Tokyo</ul>
-    <ul id="dubai">Dubai</ul>
-    <ul id="paris">Paris</ul>
-    <ul id="lima">Lima</ul>
-  </main>
+    <table id="cookie-stand"></table>
+
     <script src="js/app.js"></script>
   </body>
 </html>
