--- a/sales.html
+++ b/sales.html
@@ -8,7 +8,16 @@
 
   <body>
 
-    <table id="cookie-stand"></table>
+    <table id="cookie-stand">
+      <thead>
+        <tr id ="row"></tr>
+      </thead>
+      <tbody id ="body"></tbody>
+      <tfoot>
+        <tr id ="footrow"></tr>
+      </tfoot>
+    </table>
+  
 
     <script src="js/app.js"></script>
   </body>
