Completed Lab07 and added Read-Me

--- a/sales.html
+++ b/sales.html
@@ -9,13 +9,17 @@
   <body>
 
     <table id="cookie-stand">
+
       <thead>
         <tr id ="row"></tr>
       </thead>
+
       <tbody id ="body"></tbody>
+
       <tfoot>
-        <tr id ="footrow"></tr>
+        <tr id ="foot-row"></tr>
       </tfoot>
+
     </table>
   
 
