Added to CSS and Index HTML, still WIP

--- a/sales.html
+++ b/sales.html
@@ -6,9 +6,14 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
+
+  <img src="img/fish.jpg" alt="">
+  <img src="img/chinook.jpg" alt="">
+
+
   <body>
     <header>
-      <a href="index.html">Index</a>
+      <a href="index.html">Back to main page</a>
     </header>
 
     <table id="cookie-stand">
