Completed Lab 08 by finishing up CSS requirments

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=PT+Serif&display=swap" rel="stylesheet">
   <div class="title" id="SalmonCookies">
     <title>Salmon Cookies</title>
     <link rel="stylesheet" href="css/reset.css">
@@ -24,7 +28,7 @@
 
     <section>
       <article id="Stores">
-        <div class="store"  id="seattle">
+        <div class="store" id="seattle">
           <h4>Seattle</h4>
           <p>Address: 1100 Pike Street, Suite 8, Seattle WA 98002</p>
           <p>Hours of Operation: 6:00am - 7:00pm</p>
@@ -70,23 +74,23 @@
   <footer>
 
     <section id="Additional">
-      <div class="about" id="aboutPat">
+      <div class="addInformation" id="aboutPat">
         <h4>About Pat</h4>
         <p>Pat Antonio was born and raised in Seattle, Washington. As a business man and true Washingtonian, Pat
           combined two signature Seattle icons: Pat has developed a recipe for a coffee-time confection called Salmon
           Cookies. These cookies made into the shape of a salmon that has just a hint of fishy goodness. </p>
+        <div class="aboutPhotoClass" id="aboutPhoto">
+          <img src="img/family.jpg" alt="Pat and family">
         </div>
-
-        <div class="aboutPhoto" id="aboutPhoto">
-        <img src="img/family.jpg" alt="Pat and family">
       </div>
-        
+
+
       <div class="addInformation" id="merch">
         <h4>Merchandise</h4>
         <p>Unisex T-Shirt: $25 USD</p>
         <img src="img/shirt.jpg" alt="Salmon Cookies Shirt">
         <p>Salmon Cookie Cutter: $9 USD</p>
-        <img src="img/cutter.jpeg" alt="Cookie Cutter">
+        <img src="img/cutter (2).jpeg" alt="Cookie Cutter">
         <img src="img/frosted-cookie.jpg" alt="">
       </div>
     </section>
