--- a/sales.html
+++ b/sales.html
@@ -1,36 +1,51 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Salmon Cookies</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
+
+<head>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=PT+Serif&display=swap" rel="stylesheet">
+  <title>Salmon Cookies</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
 
-  <img src="img/fish.jpg" alt="">
-  <img src="img/chinook.jpg" alt="">
 
 
-  <body>
-    <header>
-      <a href="index.html">Back to main page</a>
-    </header>
+<body>
+  <header>
+    <a href="index.html">Back to main page</a>
+    <h1>Salmon Cookies</h1>
+  </header>
 
-    <table id="cookie-stand">
+  <div class="fishPhoto1">
+    <img src="img/fish.jpg" alt="">
+  </div>
 
-      <thead>
-        <tr id ="row"></tr>
-      </thead>
+  <div class="fishPhoto2">
+    <img src="img/chinook.jpg" alt="">
+  </div>
 
-      <tbody id ="body"></tbody>
-
-      <tfoot>
-        <tr id ="foot-row"></tr>
-      </tfoot>
-
-    </table>
   
+<main>
+  <table id="cookie-stand">
 
-    <script src="js/app.js"></script>
-  </body>
+    <thead>
+      <tr id="row"></tr>
+    </thead>
+
+    <tbody id="body"></tbody>
+
+    <tfoot>
+      <tr id="foot-row"></tr>
+    </tfoot>
+
+  </table>
+</main>
+
+  <script src="js/app.js"></script>
+</body>
+
 </html>
