--- a/sales.html
+++ b/sales.html
@@ -34,19 +34,19 @@
       <legend>Store Form</legend>
 
       <label> Location:
-        <input type="text" name="addLocation">
+        <input required type="text" name="addLocation">
       </label>
 
       <label> Minimum Customers:
-        <input type="number" name="miniCust">
+        <input required type="number" name="miniCust">
       </label>
 
       <label> Maximum Customers:
-        <input type="number" name="maxCust">
+        <input required type="number" name="maxCust">
       </label>
 
       <label> Average Cookies Per Customer:
-        <input type="number" name="aveCookies">
+        <input required type="number" name="avgCookies">
       </label>
 
       <button type="submit">Submit</button>
@@ -64,9 +64,7 @@
 
       <tbody id="body"></tbody>
 
-      <tfoot>
-        <tr id="foot-row"></tr>
-      </tfoot>
+      <tfoot id="footer"></tfoot>
 
     </table>
   </main>
